--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "node openDocument.js && vue-cli-service serve",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -34,6 +34,7 @@
     "vuex-persist": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.14.0",
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
     "@vue/cli-service": "^4.5.6",
@@ -43,7 +44,7 @@
     "core-js": "^3.3.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "numericjs": "^1.2.6",
     "raw-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
